<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
        <relativePath/>
    </parent>

    <groupId>com.nook</groupId>
    <artifactId>nook</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>nook</name>
    <description>独享 IP 代理服务</description>

    <modules>
        <module>nook-framework</module>
        <module>nook-module-system</module>
        <module>nook-module-member</module>
        <module>nook-module-operation</module>
        <module>nook-module-node</module>
        <module>nook-module-agent</module>
        <module>nook-module-trade</module>
        <module>nook-server</module>
    </modules>

    <!--
        全局编译期依赖：所有子模块自动继承，无需重复声明。
        - lombok: optional=true，不会传递到运行时 jar；annotation processor 仍正常工作。
        - mapstruct: 编译期生成 convert 实现类，运行时仅需 mapstruct.jar(很小)。
        其它工具(hutool / jackson 注解等)通过 nook-common 的传递依赖间接拥有，不放这里。
    -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
    </dependencies>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <mysql.version>8.4.0</mysql.version>
        <hutool.version>5.8.32</hutool.version>
        <guava.version>33.5.0-jre</guava.version>
        <mina-sshd.version>2.14.0</mina-sshd.version>
        <knife4j.version>4.5.0</knife4j.version>
        <sa-token.version>1.39.0</sa-token.version>
        <fastjson2.version>2.0.53</fastjson2.version>
        <redisson.version>3.34.1</redisson.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <!-- 与 Spring Boot 3.3.4 BOM 内置版本一致；显式声明避免 annotationProcessorPaths 解析不到 -->
        <lombok.version>1.18.34</lombok.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 内部模块统一版本 -->
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-spring-boot-starter-mybatis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-spring-boot-starter-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-spring-boot-starter-redis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-spring-boot-starter-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-spring-boot-starter-ssh</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-system-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-system-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-member-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-member-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-operation-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-operation-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-node-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-node-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-agent-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-agent-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-trade-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nook</groupId>
                <artifactId>nook-module-trade-server</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 第三方依赖 -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.sshd</groupId>
                <artifactId>sshd-core</artifactId>
                <version>${mina-sshd.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <!-- sa-token 鉴权 (Redisson 版本: 与 redisson-spring-boot-starter 配合) -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-redisson-jackson</artifactId>
                <version>${sa-token.version}</version>
            </dependency>

            <!-- Redisson: Redis 客户端 + 分布式锁/集合等高级抽象 -->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <!-- fastjson2: 主 JSON 序列化器 -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2-extension-spring6</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!--
                注解处理器顺序至关重要:
                1) lombok 先生成 getter/setter
                2) lombok-mapstruct-binding 桥接 (让 MapStruct 看见 Lombok 生成的访问器)
                3) mapstruct-processor 最后生成 ConvertImpl
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok-mapstruct-binding.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
